【base】对象池测试

--- a/TestSuit/TestSuit/TestSuit.vcxproj.filters
+++ b/TestSuit/TestSuit/TestSuit.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="TestInst\TestMemoryPool.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="TestInst\TestObjPool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
