--- a/TestSuit/TestSuit/TestSuit.vcxproj
+++ b/TestSuit/TestSuit/TestSuit.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="TestInst\TestLogFile.h" />
     <ClInclude Include="TestInst\TestLogModule.h" />
     <ClInclude Include="TestInst\TestMemoryPool.h" />
+    <ClInclude Include="TestInst\TestObjPool.h" />
     <ClInclude Include="TestInst\TestRandom.h" />
     <ClInclude Include="TestInst\TestString.h" />
     <ClInclude Include="TestInst\TestSystemUtil.h" />
