【base】添加系统分析日志

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,29 @@ CTestTestfile.cmake
 /sln/windows/frightenstone/.vs/frightenstone/v15/ipch/AutoPCH/ea07ff9ec6e7ac0f/RIJNDAEL.ipch
 /所需移植组件.docx
 /base/base/x64/Debug/base.tlog/unsuccessfulbuild
+*.log
+*.obj
+*.pch
+*.tlog
+*.lastbuildstate
+*.dmp
+*.logOld1
+*.logOld10
+*.logOld11
+*.logOld12
+*.logOld13
+*.logOld14
+*.logOld15
+*.logOld16
+*.logOld17
+*.logOld18
+*.logOld19
+*.logOld2
+*.logOld20
+*.logOld3
+*.logOld4
+*.logOld5
+*.logOld6
+*.logOld7
+*.logOld8
+*.logOld9
