--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -276,30 +276,19 @@
     <ClInclude Include="..\common\log\Interface\ILog.h" />
     <ClInclude Include="..\common\log\Interface\ILogImpl.h" />
     <ClInclude Include="..\common\log\Log.h" />
-    <ClInclude Include="..\common\memorypool\Defs\MemoryAlloctor.h" />
-    <ClInclude Include="..\common\memorypool\Defs\MemoryAlloctorImpl.h" />
-    <ClInclude Include="..\common\memorypool\Defs\MemoryBlock.h" />
-    <ClInclude Include="..\common\memorypool\Defs\MemoryBlockImpl.h" />
-    <ClInclude Include="..\common\memorypool\Defs\MemoryPoolCreateDefs.h" />
-    <ClInclude Include="..\common\memorypool\Impl\MemoryPoolMgr.h" />
-    <ClInclude Include="..\common\memorypool\Interface\IMemoryPoolMgr.h" />
-    <ClInclude Include="..\common\memorypool\memorypool.h" />
     <ClInclude Include="..\common\net\Defs\IocpDefs.h" />
     <ClInclude Include="..\common\net\Impl\Iocp\Example.h" />
     <ClInclude Include="..\common\net\Impl\Iocp\FS_Iocp.h" />
     <ClInclude Include="..\common\net\net.h" />
     <ClInclude Include="..\common\net\protocol\defs\ProtocolDefs.h" />
     <ClInclude Include="..\common\net\protocol\protocol.h" />
-    <ClInclude Include="..\common\objpool\Defs\MemoryBlockImpl.h" />
     <ClInclude Include="..\common\objpool\Defs\ObjAlloctor.h" />
     <ClInclude Include="..\common\objpool\Defs\ObjAlloctorImpl.h" />
     <ClInclude Include="..\common\objpool\Defs\ObjBlock.h" />
     <ClInclude Include="..\common\objpool\Defs\ObjBlockImpl.h" />
-    <ClInclude Include="..\common\objpool\Defs\ObjPoolHelper.h" />
-    <ClInclude Include="..\common\objpool\Defs\ObjPoolHelperImpl.h" />
-    <ClInclude Include="..\common\objpool\Impl\ObjPool.h" />
-    <ClInclude Include="..\common\objpool\Impl\ObjPoolImpl.h" />
-    <ClInclude Include="..\common\objpool\Interface\IObjPool.h" />
+    <ClInclude Include="..\common\objpool\Defs\ObjPoolDefs.h" />
+    <ClInclude Include="..\common\objpool\Impl\ObjPoolHelper.h" />
+    <ClInclude Include="..\common\objpool\Impl\ObjPoolHelperImpl.h" />
     <ClInclude Include="..\common\objpool\objpool.h" />
     <ClInclude Include="..\common\socket\Defs\SocketDefs.h" />
     <ClInclude Include="..\common\socket\Impl\SocketUtil.h" />
@@ -360,17 +349,12 @@
     <ClCompile Include="..\common\log\Defs\LogTask.cpp" />
     <ClCompile Include="..\common\log\Impl\FS_Log.cpp" />
     <ClCompile Include="..\common\log\Interface\ILog.cpp" />
-    <ClCompile Include="..\common\memorypool\Defs\MemoryAlloctor.cpp" />
-    <ClCompile Include="..\common\memorypool\Defs\MemoryBlock.cpp" />
-    <ClCompile Include="..\common\memorypool\Defs\MemoryPoolCreateDefs.cpp" />
-    <ClCompile Include="..\common\memorypool\Impl\MemoryPoolMgr.cpp" />
-    <ClCompile Include="..\common\memorypool\Interface\IMemoryPoolMgr.cpp" />
     <ClCompile Include="..\common\net\Defs\IocpDefs.cpp" />
     <ClCompile Include="..\common\net\Impl\Iocp\Example.cpp" />
     <ClCompile Include="..\common\net\Impl\Iocp\FS_Iocp.cpp" />
     <ClCompile Include="..\common\net\protocol\defs\ProtocolDefs.cpp" />
-    <ClCompile Include="..\common\objpool\Impl\ObjPool.cpp" />
-    <ClCompile Include="..\common\objpool\Interface\IObjPool.cpp" />
+    <ClCompile Include="..\common\objpool\Defs\ObjPoolDefs.cpp" />
+    <ClCompile Include="..\common\objpool\Impl\ObjPoolHelper.cpp" />
     <ClCompile Include="..\common\socket\Impl\SocketUtil.cpp" />
     <ClCompile Include="base.cpp" />
     <ClCompile Include="dllmain.cpp" />
