--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -276,12 +276,22 @@
     <ClInclude Include="..\common\log\Interface\ILog.h" />
     <ClInclude Include="..\common\log\Interface\ILogImpl.h" />
     <ClInclude Include="..\common\log\Log.h" />
+    <ClInclude Include="..\common\memorypool\Defs\MemoryAlloctor.h" />
+    <ClInclude Include="..\common\memorypool\Defs\MemoryAlloctorImpl.h" />
+    <ClInclude Include="..\common\memorypool\Defs\MemoryBlock.h" />
+    <ClInclude Include="..\common\memorypool\Defs\MemoryPoolCreateDefs.h" />
+    <ClInclude Include="..\common\memorypool\Impl\MemoryPoolMgr.h" />
+    <ClInclude Include="..\common\memorypool\Interface\IMemoryPool.h" />
+    <ClInclude Include="..\common\memorypool\Interface\IMemoryPoolMgr.h" />
+    <ClInclude Include="..\common\memorypool\memorypool.h" />
     <ClInclude Include="..\common\net\Defs\IocpDefs.h" />
     <ClInclude Include="..\common\net\Impl\Iocp\Example.h" />
     <ClInclude Include="..\common\net\Impl\Iocp\FS_Iocp.h" />
     <ClInclude Include="..\common\net\net.h" />
     <ClInclude Include="..\common\net\protocol\defs\ProtocolDefs.h" />
     <ClInclude Include="..\common\net\protocol\protocol.h" />
+    <ClInclude Include="..\common\objpool\Defs\AlloctorNode.h" />
+    <ClInclude Include="..\common\objpool\Defs\AlloctorNodeImpl.h" />
     <ClInclude Include="..\common\objpool\Defs\ObjAlloctor.h" />
     <ClInclude Include="..\common\objpool\Defs\ObjAlloctorImpl.h" />
     <ClInclude Include="..\common\objpool\Defs\ObjBlock.h" />
@@ -349,6 +359,12 @@
     <ClCompile Include="..\common\log\Defs\LogTask.cpp" />
     <ClCompile Include="..\common\log\Impl\FS_Log.cpp" />
     <ClCompile Include="..\common\log\Interface\ILog.cpp" />
+    <ClCompile Include="..\common\memorypool\Defs\MemoryAlloctor.cpp" />
+    <ClCompile Include="..\common\memorypool\Defs\MemoryBlock.cpp" />
+    <ClCompile Include="..\common\memorypool\Defs\MemoryPoolCreateDefs.cpp" />
+    <ClCompile Include="..\common\memorypool\Impl\MemoryPoolMgr.cpp" />
+    <ClCompile Include="..\common\memorypool\Interface\IMemoryPool.cpp" />
+    <ClCompile Include="..\common\memorypool\Interface\IMemoryPoolMgr.cpp" />
     <ClCompile Include="..\common\net\Defs\IocpDefs.cpp" />
     <ClCompile Include="..\common\net\Impl\Iocp\Example.cpp" />
     <ClCompile Include="..\common\net\Impl\Iocp\FS_Iocp.cpp" />
